--- a/config/i3/i3.md
+++ b/config/i3/i3.md
@@ -13,7 +13,7 @@
 sudo apt install feh
 ```
 
-將 [config](https://github.com/rykersun/Dracula_Mountain/blob/main/config/i3/config#L54) 第 54 行的 sun 改成自己的使用者名稱
+將 [config](config) 第 54 行的 sun 改成自己的使用者名稱
 
 將桌布命名成 `wallpaper.jpg` (或著[直接下載 Dracula_Mountain 的桌布](../../wallpaper/wallpaper.jpg))
 
